// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ToggleSwitch /> should match snapshots 1`] = `
<div>
  <input
    aria-checked={false}
    checked={false}
    id="inline-toggle"
    onChange={[Function]}
    style={
      Object {
        "display": "none",
      }
    }
    type="checkbox"
  />
  <label
    data-tooltip="Test 1"
    htmlFor="inline-toggle"
    onMouseOut={[Function]}
    onMouseOver={[Function]}
    role="tooltip"
  />
  <style
    jsx={true}
  >
    
                        label {
                            position: relative;
                            display: block;
                            margin: 0 10px;
                            height: 20px;
                            width: 44px;
                            background: #898989;
                            border-radius: 100px;
                            cursor: pointer;
                            -webkit-transition: all 0.3s ease;
                            transition: all 0.3s ease;
                        }
                        label:after {
                            position: absolute;
                            left: -2px;
                            top: -3px;
                            display: block;
                            width: 26px;
                            height: 26px;
                            border-radius: 100px;
                            background: #fff;
                            -webkit-box-shadow: 0px 3px 3px rgba(0, 0, 0, 0.05);
                            box-shadow: 0px 3px 3px rgba(0, 0, 0, 0.05);
                            content: '';
                            -webkit-transition: all 0.3s ease;
                            transition: all 0.3s ease;
                        }
                        label:active:after {
                            -webkit-transform: scale(1.15, 0.85);
                            transform: scale(1.15, 0.85);
                        }
                        input:checked ~ label {
                            background: #6f9eb1;
                        }
                        input:checked ~ label:after {
                            left: 20px;
                            background: #0085ba;
                        }
                        input:disabled ~ label {
                            background: #d5d5d5;
                            pointer-events: none;
                        }
                        input:disabled ~ label:after {
                            background: #bcbdbc;
                        }
                    
  </style>
</div>
`;

exports[`<ToggleSwitch /> should match snapshots 2`] = `
<div>
  <input
    aria-checked={true}
    checked={true}
    id="inline-toggle"
    onChange={[Function]}
    style={
      Object {
        "display": "none",
      }
    }
    type="checkbox"
  />
  <label
    data-tooltip="Test 2"
    htmlFor="inline-toggle"
    onMouseOut={[Function]}
    onMouseOver={[Function]}
    role="tooltip"
  />
  <style
    jsx={true}
  >
    
                        label {
                            position: relative;
                            display: block;
                            margin: 0 10px;
                            height: 20px;
                            width: 44px;
                            background: #898989;
                            border-radius: 100px;
                            cursor: pointer;
                            -webkit-transition: all 0.3s ease;
                            transition: all 0.3s ease;
                        }
                        label:after {
                            position: absolute;
                            left: -2px;
                            top: -3px;
                            display: block;
                            width: 26px;
                            height: 26px;
                            border-radius: 100px;
                            background: #fff;
                            -webkit-box-shadow: 0px 3px 3px rgba(0, 0, 0, 0.05);
                            box-shadow: 0px 3px 3px rgba(0, 0, 0, 0.05);
                            content: '';
                            -webkit-transition: all 0.3s ease;
                            transition: all 0.3s ease;
                        }
                        label:active:after {
                            -webkit-transform: scale(1.15, 0.85);
                            transform: scale(1.15, 0.85);
                        }
                        input:checked ~ label {
                            background: #6f9eb1;
                        }
                        input:checked ~ label:after {
                            left: 20px;
                            background: #0085ba;
                        }
                        input:disabled ~ label {
                            background: #d5d5d5;
                            pointer-events: none;
                        }
                        input:disabled ~ label:after {
                            background: #bcbdbc;
                        }
                    
  </style>
</div>
`;
